# pdf_to_llama

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pic.txt  pyproject.toml  test_clud.py
docubot/database/: connect.py
docubot/database/models/: __init__.py  chats.py  document_comments.py  documents.py  users.py  users_tokens.py  vectorstore.py
docubot/repository/: chats.py  comments.py  documents.py  tags.py  users.py  users_tokens.py  vectorstores.py
docubot/routes/: __init__.py  auth.py  chats.py  document_comments.py  documents.py  tags.py  users.py  users_tokens.py  vectorstore.py
docubot/routes/docs/: documents.py
docubot/schemas/: chats.py  document_comments.py  documents.py  user.py  users_tokens.py  vectorstore_schema.py
docubot/services/: auth.py  cloudinary.py  extracting_pdf.py  llm.py  pdf_to_vectorstore.py
docubot/templates/emails/: confirmed_email.html
docubot/utils/: filters.py
migrations/: env.py
migrations/versions/: 1af7f21ebe69_add_user_token.py  6ccc59247723_.py  780de16559cf_user_tokens.py  b355a97878f6_add_user_level.py  c0baaeee31f8_initial.py
static/: slitlogram.css  style.css
static/client_rest/: documents.html  index.html  logout.html  search_info.html  signup.html  user_profile.html
static/client_rest/css/: slitlogram.css
static/client_rest/javascript/: app.js  chats.js  documents.js  login.js  logout.js  search.js  signup.js  user_profil.js
templates/: index.html  index_1.html
