[tool.poetry]
name = "DocuBot"
version = "0.1.0"
description = ""
authors = ["Valekantina <vgordynska@gmail.com>"]
readme = "README.md"
packages = [{include = "docubot"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
sqlalchemy = "^2.0.15"
alembic = "^1.11.1"
fastapi-limiter = "^0.1.5"
redis = "^4.5.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
cloudinary = "^1.33.0"
fastapi-mail = "^1.2.8"
libgravatar = "^1.0.4"
qrcode = "^7.4.2"
python-multipart = "^0.0.6"
bcrypt = "^4.0.1"
strenum = "^0.4.10"
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.10.0"
asynctest = "^0.13.0"
psycopg2 = "^2.9.6"
gunicorn = "^20.1.0"
openai = "^0.27.8"
aiofiles = "^23.2.1"
pypdf2 = "^3.0.1"
langchain = "^0.0.308"
faiss-cpu = "^1.7.4"
tiktoken = "^0.5.1"
langchain = "^0.0.309"
pypdf = "^3.16.2"
pathlib = "^1.0.1"
environs = "^9.5.0"


[tool.poetry.group.test.dependencies]
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
